
BUGFIX:
* Dockerfiles | update
* type=device | fix object count for utilities
* type=vendor-migration vendor=ciscoasa | bugfix during original config storing
* class CONVERTER.php | bugfix for bidirNAT adjustment

GENERAL:
* class ServiceStore | loop detection - reduce mwarning output to a single finding per $groupName
* update bash_autocompletion/pan-os-php.sh


2.1.1 (20230419)
UTIL:

BUGFIX:
* Dockerfile update to get everything working with new type=vendor-migration
* class Rule.php - fix for PHP7

GENERAL:


2.1.0  (20230419)
UTIL:
* type=vendor-migration | introduce 3rd party Firewall configuration migration to PANOS XML config file
* type=vendor-migration | vendor=stonesoft - extend validation output
* type=register-ip | extend usage for Panorama registered-ip
* type=rule | actions=exporttoexcel - extend help information for applicationsee and hitcount
* type=xpath | introduce argument display-xmlLineNo

BUGFIX:
* class Snippet | bugfix add DataFilteringProfileStore
* type=address-merger | avoid error out on not yet supported classes Ethernet/TunnelInterface
* class Tag.php | bugfix for PHP 7

GENERAL:
* dockerfile update to ubuntu22 and php8.1
* general | introduce argument 'shadow-displayxmlnode'
* general | extend utilities for Fawkes/Buckbeak Snippets
* remove backtrace from mwarning - mostly related to Fawkes/Buckbeak Snippet config


2.0.75 (20230412)
UTIL:
* type=securityprofilegroup | introduce 'filter=(secprof is XYZ)' - inspecific to search all securityprofilegroups for secprof which are set to 'default'/'strict'
* type=diff | extend help information about usage
* type=device | introduce 'filter=(template has-multi-vsys)'
* type=rule | extend with actions=group-tag-remove | group-tag-set:GROUPTAGNAME
* type=rule | introduce 'filter=(group-tag is.set)'
* type=gcp | introduction of GCP helper tools
* type=config-size - extend for snippet